Continued to work on the home page. Fixed spacing between elements.

--- a/css/creative.css
+++ b/css/creative.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
 }
 
 hr {
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: #222;
+    color: #fff;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -62,6 +62,12 @@ p {
 
 .text-faded {
     color: rgba(255,255,255,.7);
+}
+
+.info-row {
+    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 section {
@@ -196,9 +202,12 @@ header .header-content {
 header .header-content .header-content-inner h1 {
     margin-top: 0;
     margin-bottom: 0;
-    text-transform: uppercase;
     font-weight: 700;
     font-size: 50px;
+}
+
+header .header-content .header-content-inner h2 {
+    font-size: 25px;
 }
 
 header .header-content .header-content-inner hr {
